将Home组件所有的子组件都从原静态项目中拆分出来

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- 清除浏览器所有的默认样式 -->
     <link rel="stylesheet" href="<%= BASE_URL %>reset.css">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>网红好物商城</title>
   </head>
   <body>
     <noscript>
